--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -462,10 +462,10 @@
 }
 
 #filtersButton {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 6px; 
+  gap: 4px; 
   padding: 0 12px;
   font-size: 14px;
   width: 100%;
@@ -476,6 +476,11 @@
   cursor: pointer;
   box-sizing: border-box;
   height: 36px;
+}
+
+#filtersButton.active .filters-label {
+  color: var(--accent-color);
+  font-weight: bold;
 }
 
 #filtersButton .filter-icon {
@@ -798,11 +803,12 @@
   <div class="group-filters" style="display: flex; align-items: center;">
     <div class="custom-dropdown" id="filtersDropdown">
       <div id="filtersButton">
-        Filters
+        <span class="filters-label">Filters</span>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="filter-icon" style="width:16px; height:16px;">
           <path stroke-linecap="round" stroke-linejoin="round" d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z" />
         </svg>
       </div>
+
 
       <div id="filtersOptions">
         <div class="filter-columns">
@@ -1063,6 +1069,17 @@ sortSelected.addEventListener('click', e => {
   }
 });
 
+function updateFiltersButton() {
+  const count = activeFilters.size;
+  if (count > 0) {
+    filtersButton.textContent = `Filters: ${count}`;
+    filtersButton.classList.add('active'); // use this class to apply accent color
+  } else {
+    filtersButton.textContent = 'Filters';
+    filtersButton.classList.remove('active');
+  }
+}
+
 // --- Filters dropdown ---
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
@@ -1092,27 +1109,18 @@ clearFiltersBtn.addEventListener('click', e => {
   filtersOptions.querySelectorAll('button[data-filter].selected')
     .forEach(btn => btn.classList.remove('selected'));
 
+  // Update Filters button text and highlight
+  updateFiltersButton();
+
   // Refresh results using current searchbox value (safe lookup)
   const sb = document.getElementById('searchBox');
   renderResults(sb ? sb.value : '');
-
-  // IMPORTANT: do NOT set filtersOptions.style.display or filtersButton.classList here.
-  // That prevents Clear from ever opening the filters panel.
 });
+
 
 // --- Global click closes everything ---
 document.addEventListener('click', () => closeAllDropdowns());
 
-// --- Filter button toggle logic ---
-filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
-  btn.addEventListener('click', () => btn.classList.toggle('selected'));
-});
-
-
-
-filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
-  btn.addEventListener('click', () => btn.classList.toggle('selected'));
-});
 
 // --- Search & Sort Options ---
 dropdownOptions.querySelectorAll('.option').forEach(option => {
@@ -1188,23 +1196,32 @@ function renderPagination(totalItems) {
   pagination.appendChild(nextBtn);
 }
 
+const updateFiltersButton = () => {
+  const count = activeFilters.size;
+  filtersButton.textContent = count ? `Filters: ${count}` : 'Filters';
+  // Re-add SVG after changing text
+  const svg = filtersButton.querySelector('svg');
+  if (svg) filtersButton.appendChild(svg);
+  // Highlight if any active
+  if (count) filtersButton.classList.add('accent');
+  else filtersButton.classList.remove('accent');
+};
 
 filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
   btn.addEventListener('click', () => {
     const filter = btn.dataset.filter;
-    if (activeFilters.has(filter)) activeFilters.delete(filter);
-    else activeFilters.add(filter);
-
-    renderResults(searchBox.value); // visual state updated here
+    if (activeFilters.has(filter)) {
+      activeFilters.delete(filter);
+      btn.classList.remove('selected');
+    } else {
+      activeFilters.add(filter);
+      btn.classList.add('selected');
+    }
+    updateFiltersButton();
+    renderResults(searchBox.value);
   });
 });
 
-
-clearFiltersBtn.addEventListener('click', () => {
-  activeFilters.clear();
-  filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => btn.classList.remove('selected'));
-  renderResults(searchBox.value);
-});
 
 // --- Render results ---
 function renderResults(query) {
@@ -1236,12 +1253,6 @@ function renderResults(query) {
     // AND across different filter types
     return placementMatch && categoryMatch;
   }
-
-// update filter button visuals
-filtersOptions.querySelectorAll('button[data-filter]').forEach(btn => {
-  if (activeFilters.has(btn.dataset.filter)) btn.classList.add('selected');
-  else btn.classList.remove('selected');
-});
 
 
   // --- Filter the DB ---
