--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -465,24 +465,27 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 4px; 
+  gap: 4px;
   padding: 0 12px;
   font-size: 14px;
   width: 100%;
-  border: 2px solid var(--accent);
+  border: 2px solid var(--accent); /* keep border if you like */
   border-radius: 6px 0 0 6px;
   background-color: var(--card-bg);
   color: var(--text);
   cursor: pointer;
   box-sizing: border-box;
   height: 36px;
+  transition: background-color 0.15s, color 0.15s;
 }
 
 #filtersButton.active {
-  background-color: var(--accent-color);
-  color: var(--bg-color);
-  border-color: var(--accent-color);
+  background-color: var(--accent);
+  color: var(--bg); 
+  border-color: var(--accent);
+  box-shadow: none;
 }
+
 
 #filtersButton.active .filters-label {
   color: var(--bg-color); 
