--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -533,15 +533,16 @@
 #filtersOptions button[data-filter] {
   display: block;
   width: 100%;
-  padding: 8px 12px;  
+  padding: 4px 6px;
   margin: 0;
-  text-align: left;   
+  text-align: center;   
   background: var(--card-bg);
   border: none;
   color: var(--text);
-  font-size: 14px;
+  font-size: 13px;
   line-height: 1.2;
   cursor: pointer;
+  border-radius: 0;
   transition: background 0.15s, color 0.15s;
 }
 
@@ -562,8 +563,8 @@
   background-color: rgba(255, 192, 15, 0.1); 
   color: var(--accent);
   padding: 2px 0;          
-  margin: 4px 0 2px 0;    
-  border-radius: 4px 4px 0 0; 
+  margin: 0;    
+  border-radius: 0; 
 }
 
 #filtersOptions button[data-filter]:hover,
