--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -533,14 +533,14 @@
 #filtersOptions button[data-filter] {
   display: block;
   width: 100%;
-  padding: 4px 6px;
+  padding: 2px;
   margin: 0;
   text-align: center;   
   background: var(--card-bg);
   border: none;
   color: var(--text);
   font-size: 13px;
-  line-height: 1.2;
+  line-height: 1;
   cursor: pointer;
   border-radius: 0;
   transition: background 0.15s, color 0.15s;
