--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -540,7 +540,7 @@
   border: none;
   color: var(--text);
   font-size: 13px;
-  line-height: 1;
+  line-height: 1.8;
   cursor: pointer;
   border-radius: 0;
   transition: background 0.15s, color 0.15s;
@@ -579,29 +579,25 @@
 }
 
 .clear-filters {
-  margin-top: 4px;
-  padding: 4px 8px;
+  margin-top: 4px;              
+  padding: 4px 8px;             
   background-color: #ffeded;
   border: 1px solid #ff4d4f;
   color: #ff4d4f;
-  border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;    
   cursor: pointer;
   text-align: center;
   font-size: 13px;
-  font-weight: bold;
   transition: background 0.15s, transform 0.1s, color 0.15s;
 }
 
 .clear-filters:hover {
-  background-color: #ff4c4c;
-  color: #1a1a1a;  /* force dark text for contrast */
+  background-color: #ffb3b3;
 }
 
 .clear-filters:active {
-  background-color: #e04343;
-  color: #1a1a1a;
+  background-color: #ffb3b3; 
 }
-
 
 #filtersOptions {
   display: flex;
