--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -582,7 +582,7 @@
   padding: 4px 8px;             
   background-color: #ffeded;
   border: 1px solid #ff4d4f;
-  color: #ff4d4f;
+  color: #ff4d4f;        
   border-radius: 4px 4px 0 0;    
   cursor: pointer;
   text-align: center;
@@ -592,11 +592,14 @@
 
 .clear-filters:hover {
   background-color: #ffb3b3;
+  color: #ff4d4f;         
 }
 
 .clear-filters:active {
-  background-color: #ffb3b3; 
+  background-color: #ff9999; 
+  color: #ff4d4f;         
 }
+
 
 #filtersOptions {
   display: flex;
