--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -535,6 +535,7 @@
   width: 100%;
   padding: 2px;
   margin: 0;
+  margin-top: -4px;
   text-align: center;   
   background: var(--card-bg);
   border: none;
@@ -562,7 +563,7 @@
   background-color: rgba(255, 192, 15, 0.1); 
   color: var(--accent);
   padding: 2px 0;          
-  margin: 0;    
+  margin: 0;
   border-radius: 0; 
 }
 
