--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -390,6 +390,11 @@
   cursor: pointer;
 }
 
+#dropdownOptions .option:hover {
+  background-color: var(--accent);
+  color: black;
+}
+
 
 #dropdownSelected {
   display: flex;
