--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -425,6 +425,23 @@
   pointer-events: auto;
 }
 
+#dropdownOptions,
+#sortOptions,
+#filtersOptions {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease, opacity 0.2s ease;
+}
+
+#dropdownOptions.open,
+#sortOptions.open,
+#filtersOptions.open {
+  max-height: 500px; /* adjust to content */
+  opacity: 1;
+}
+
+
 
 #dropdownSelected {
   display: flex;
@@ -1083,13 +1100,12 @@ const clearFiltersBtn = document.querySelector('.clear-filters');
 function closeAllDropdowns() {
   dropdownOptions.classList.remove('open');
   dropdownSelected.classList.remove('open');
-
   sortOptions.classList.remove('open');
   sortSelected.classList.remove('open');
-
   filtersOptions.classList.remove('open');
   filtersButton.classList.remove('open');
 }
+
 
 function closeOtherDropdowns(except) {
   if (except !== 'search') {
@@ -1159,7 +1175,7 @@ function updateFiltersButton() {
 // --- Filters dropdown ---
 filtersButton.addEventListener('click', e => {
   e.stopPropagation();
-  const isOpen = filtersOptions.style.display === 'block';
+  const isOpen = filtersOptions.classList.contains('open');
   closeAllDropdowns(); // Close everything before toggling filters
   if (!isOpen) {
     filtersOptions.classList.add('open');
