--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -159,9 +159,10 @@
 .inline-group {
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: 16px;
   justify-content: center;
   margin-top: 8px;
+  width: 100%;
 }
 
 #clearFiltersExternal {
@@ -370,7 +371,6 @@
   }
 
 #dropdownOptions {
-  display: none;
   position: absolute;
   font-size: 14px;
   top: 100%;
@@ -410,11 +410,12 @@
   overflow: hidden;
   z-index: 200;
 
+  /* animation setup */
   opacity: 0;
   transform: scaleY(0.95);
-  transform-origin: top;
+  max-height: 0;
   pointer-events: none;
-  transition: opacity 0.15s ease, transform 0.15s ease;
+  transition: opacity 0.15s ease, transform 0.15s ease, max-height 0.2s ease;
 }
 
 #dropdownOptions.open,
@@ -422,25 +423,9 @@
 #sortOptions.open {
   opacity: 1;
   transform: scaleY(1);
+  max-height: 500px; /* adjust to fit content */
   pointer-events: auto;
 }
-
-#dropdownOptions,
-#sortOptions,
-#filtersOptions {
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease, opacity 0.2s ease;
-}
-
-#dropdownOptions.open,
-#sortOptions.open,
-#filtersOptions.open {
-  max-height: 500px; /* adjust to content */
-  opacity: 1;
-}
-
 
 
 #dropdownSelected {
@@ -496,6 +481,7 @@
 #filtersDropdown,
 #sortDropdown {
   display: inline-flex;
+  position: relative;
   align-items: center;
   margin: 0;
   padding: 0;
@@ -703,21 +689,25 @@
 
 #sortDropdown {
   position: relative;
-  width: 150px; 
+  width: 200px;
+  white-space: nowrap; 
   height: 36px;
   display: flex;
   flex-shrink: 0;
 }
 
 #sortSelected {
-  display: flex;
+  display: inline-flex;;
   align-items: center;
+  gap: 4px;
   padding: 0 12px;
   font-size: 14px;
+  max-width: none;
   width: 100%;
   border: 2px solid var(--accent);
   border-radius: 6px;
   background-color: var(--card-bg);
+  white-space: nowrap;
   color: var(--text);
   cursor: pointer;
   box-sizing: border-box;
@@ -727,22 +717,8 @@
   border-radius: 6px 6px 0 0;
 }
 
-#sortOptions {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%; 
-  margin-top: -2px;
-  background-color: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 0 0 6px 6px;
-  font-size: 14px;
-  z-index: 200;
-  overflow: hidden;
-}
-
 #sortOptions .option {
+  font-size: 14px;
   padding: 8px 12px;
   cursor: pointer;
 }
@@ -919,7 +895,6 @@
 
   <!-- Sort group -->
   <div class="group-sort">
-    <label for="sortMode">Sort By:</label>
     <div class="custom-dropdown" id="sortDropdown">
       <div id="sortSelected">Workshop Menu ▼</div>
       <div id="sortOptions">
@@ -1133,6 +1108,9 @@ dropdownSelected.addEventListener('click', e => {
   }
 });
 
+// Set initial text
+sortSelected.textContent = 'Sort By: Workshop Menu ▼';
+
 // --- Sort By dropdown ---
 sortSelected.addEventListener('click', e => {
   e.stopPropagation();
@@ -1143,6 +1121,23 @@ sortSelected.addEventListener('click', e => {
     sortSelected.classList.add('open');
   }
 });
+
+// Option click handler
+sortOptions.querySelectorAll('.option').forEach(option => {
+  option.addEventListener('click', () => {
+    currentSort = option.dataset.value;
+
+    // Update button text dynamically to show the selected option
+    sortSelected.textContent = `Sort By: ${option.textContent}`;
+
+    // Close dropdown
+    sortOptions.classList.remove('open');
+    sortSelected.classList.remove('open');
+
+    renderResults(document.getElementById('searchBox').value);
+  });
+});
+
 
 function updateFiltersButton() {
   const count = activeFilters.size;
