--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -159,7 +159,7 @@
 .inline-group {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 10px;
   justify-content: center;
   margin-top: 8px;
   width: 100%;
@@ -689,7 +689,7 @@
 
 #sortDropdown {
   position: relative;
-  width: 200px;
+  width: 180xpx;
   white-space: nowrap; 
   height: 36px;
   display: flex;
